testsuite/poke.pkl/char-diag-2.pk
/* { dg-do compile } */

var foo = ''; /* { dg-error "" } */
